--- a/style.css
+++ b/style.css
@@ -1,5 +1,93 @@
-/* Move down content because we have a fixed navbar that is 3.5rem tall */
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
 
+/* Move down content because we have a fixed navbar that is 3.5rem tall */
 body {
-    padding-top: 3.5rem;
+	padding-top: 3.5rem;
+}
+
+nav {
+	padding-left: 10vw;
+}
+
+.carousel-image {
+	filter: grayscale(50%) brightness(55%);
+	height: 40vw;
+	overflow: hidden;
+	object-fit: cover;
+}
+
+.header-div {
+	height: 15vw;
+	overflow: hidden;
+	object-fit: cover;
+}
+
+.landing-header {
+	font-weight: 450;
+	font-size: 8vw;
+	text-align: left;
+	left: 10%;
+}
+
+.logo {
+	font-family: 'Amatic SC';
+}
+
+.nav-logo {
+	font-family: 'Amatic SC';
+	font-size: 35px;
+	margin-left: 15px;
+}
+
+.p-landing {
+	padding: 1em;
+}
+
+.gray-background {
+	background-color: #333;
+}
+
+.subheading {
+	padding: 0.5em;
+}
+
+.container-fluid {
+	overflow: hidden;
+}
+
+.cards-wrapper {
+	display: flex;
+	justify-content: center;
+}
+
+.card img {
+	max-width: 100%;
+	max-height: 100%;
+}
+
+.card {
+	margin: 0 0.5em;
+	box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+	border: none;
+	border-radius: 0;
+}
+
+.carousel-inner {
+	/* padding: 1em; */
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+	background-color: #e1e1e1;
+	width: 5vh;
+	height: 5vh;
+	border-radius: 50%;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+@media (min-width: 768px) {
+	.card img {
+		height: 11em;
+	}
 }
